--- a/assets/index.html
+++ b/assets/index.html
@@ -2,16 +2,11 @@
 <html>
     <head>
         {%metas%}
-        <title>{%title%}</title>
+        <title>CoronaTrend</title>
         {%favicon%}
         {%css%}
     </head>
     <body>
-        <div id="react-entry-point">
-            <div class="_dash-loading">
-            CoronaTrend is loading...
-            </div>
-        </div>
         {%app_entry%}
         <footer>
             {%config%}
